# cpp_algorithms

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
algorithms/: ArrayAlgorithms.cpp  ArrayAlgorithms.h  StringAlgorithms.cpp  StringAlgorithms.h
projects/: Calculator.cpp  Calculator.h  Magic8Ball.cpp  Magic8Ball.h
